--- a/index.html
+++ b/index.html
@@ -1,320 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>KapukAlas - Multipurpose template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-</head>
-
 <body>
-    <header>
-        <div class="container">
-            <center>
-                <h1>This is Elixir</h1>
-                <h3>We provide services to improve your digital life.</h3>
-                <div style="margin-top:30px;">
-                    <a href="" class="btn btn-primary btn-lg" role="button">Learn more</a>
-                </div>
-                <div class="skroler">
-                    <a href="#about"><span class="glyphicon glyphicon-chevron-down"></span></a>
-                </div>
-            </center>
-        </div>
-    </header>
-
-    <div id="nav">
-        <nav class="navbar navbar-default navbar-static affix-top" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-                    <a class="navbar-brand" href="#">Elixir</a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Home Page</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Blogs</a></li>
-                        <li><a href="index.html">Contact us</a></li>
-                    </ul>
-                    </li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-        </nav>
-    </div>
-    <section id="about" class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <span class="glyphicon glyphicon-send"></span> <br>
-                <h3>Awesome Feature</h3>
-                We always try to add special and awesome features to each and every one of our applications.<br><br>
-            </div>
-            <div class="col-md-3">
-                <span class="glyphicon glyphicon-heart"></span> <br>
-                <h3>Build with love</h3>
-                Our products come with each and every one of our employee's hard work!<br><br>
-            </div>
-            <div class="col-md-3">
-                <span class="glyphicon glyphicon-phone"></span> <br>
-                <h3>Responsive Layout</h3>
-                All of our products are tailored to making our users' lives easier, therefore our products have amazing layout!<br><br>
-            </div>
-            <div class="col-md-3">
-                <span class="glyphicon glyphicon-tint"></span> <br>
-                <h3>Customizeable</h3>
-                We always make sure that our features have lots of customizability<br><br>
-            </div>
-        </div>
-    </section>
-
-    <section id="about3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="img/mockup2.png" width="100%" height="100%" class="img-mockup">
-                </div>
-                <div class="col-md-6 feature">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <span class="glyphicon glyphicon-tint"></span>
-                        </div>
-                        <div class="col-md-10">
-                            <h4>Color variations</h4>
-                            Praesent gravida justo quis faucibus vulputate. Cras hendrerit varius dui, a molestie ligula imperdiet quis.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2">
-                            <span class="glyphicon glyphicon-cloud"></span>
-                        </div>
-                        <div class="col-md-10">
-                            <h4>Cloud assets</h4>
-                            Praesent gravida justo quis faucibus vulputate. Cras hendrerit varius dui, a molestie ligula imperdiet quis.
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2">
-                            <span class="glyphicon glyphicon-bell"></span>
-                        </div>
-                        <div class="col-md-10">
-                            <h4>Awesome components</h4>
-                            Praesent gravida justo quis faucibus vulputate. Cras hendrerit varius dui, a molestie ligula imperdiet quis.
-                        </div>
-                    </div>
-                    <a href="" class="btn btn-primary btn-lg pull-right" role="button">Learn more</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section id="portfolio">
-        <div class="container">
-            <h4>Latest Projects</h4>
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                Maecenas euismod vitae lacus id blandit. Curabitur elementum ultrices nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.
-                            </div>
-                            <img src="img/gal/1.jpg" width="100%" height="100%">
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                Maecenas euismod vitae lacus id blandit. Curabitur elementum ultrices nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.
-                            </div>
-                            <img src="img/gal/2.jpg" width="100%" height="100%">
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                Maecenas euismod vitae lacus id blandit. Curabitur elementum ultrices nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.
-                            </div>
-                            <img src="img/gal/3.jpg" width="100%" height="100%">
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                Maecenas euismod vitae lacus id blandit. Curabitur elementum ultrices nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.
-                            </div>
-                            <img src="img/gal/4.jpg" width="100%" height="100%">
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                Maecenas euismod vitae lacus id blandit. Curabitur elementum ultrices nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.
-                            </div>
-                            <img src="img/gal/5.jpg" width="100%" height="100%">
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="">
-                        <div class="thumbnail">
-                            <div class="caption">
-                                Maecenas euismod vitae lacus id blandit. Curabitur elementum ultrices nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.
-                            </div>
-                            <img src="img/gal/6.jpg" width="100%" height="100%">
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <a href="" class="btn btn-primary btn-lg" role="button">View more projects</a>
-        </div>
-    </section>
-
-    <section id="sponsor">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <img src="img/cc.png">
-                </div>
-                <div class="col-md-3">
-                    <img src="img/tf.png">
-                </div>
-                <div class="col-md-3">
-                    <img src="img/gr.png">
-                </div>
-                <div class="col-md-3">
-                    <img src="img/pd.png">
-                </div>
-            </div>
-            <h3>Become a Beta Tester</h3>
-            Being a Beta Tester means you get to try our products for free while they are still in their beta stages. To become a Beta Tester, please click on the button that says "Apply for Beta Tester", which you will then be prompted with a program download. Run the program after it's done installing, and follow the instructions you see.
-            <div style="margin-top:40px;">
-                <!--<a href="" class="btn btn-primary btn-lg" role="button">Learn more</a>-->
-                <!--<a href="" class="btn btn-default btn-lg" role="button">Sign up now</a>-->
-                <a href="" class="btn btn-primary btn-lg" role="button">Apply for Beta Tester</a>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <h4>Elixir</h4>
-                    <p>All of our services are meant to improve your digital life, if you have a complaint, please email us at elixirware@gmail.com.</p>
-                </div>
-                <div class="col-md-3">
-                    <h4>Our location</h4>
-                    <div class="row">
-                        <div class="col-md-1"><span class="glyphicon glyphicon-map-marker"></span></div>
-                        <div class="col-md-10">Coming Soon!</div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-1"><span class="glyphicon glyphicon-envelope"></span></div>
-                        <div class="col-md-10">elixirware@gmail.com</div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-1"><span class="glyphicon glyphicon-earphone"></span></div>
-                        <div class="col-md-10">Coming Soon!</div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <h4>Latest blogs</h4>
-                    <div class="row">
-                        <div class="col-md-1"><span class="glyphicon glyphicon-pencil"></span></div>
-                        <div class="col-md-10">Coming Soon!</div>
-                    </div><br>
-                    <div class="row">
-                        <div class="col-md-1"><span class="glyphicon glyphicon-pencil"></span></div>
-                        <div class="col-md-10">Coming Soon!</div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <h4>Subscribe</h4>
-                    <input type="text" class="form-control" placeholder="Your Email Address">   
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <footer id="copyright">
-        <p>Copyright by Elixir 2018, all rights reserved.</p>
-    </footer>
-
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script>
-        $(function() {
-            $('a[href*=#]:not([href=#])').click(function() {
-                if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
-                    var target = $(this.hash);
-                    target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                    if (target.length) {
-                        $('html,body').animate({
-                            scrollTop: target.offset().top
-                        }, 1000);
-                        return false;
-                    }
-                }
-            });
-        });
-
-        $(function() {
-            //navbar affix
-            $('#nav').affix({
-                offset: {
-                    top: $('header').height()
-                }
-            });
-        });
-
-        $('#nav .navbar-nav li>a').click(function() {
-            var link = $(this).attr('href');
-            var posi = $(link).offset().top + 20;
-            $('body,html').animate({
-                scrollTop: posi
-            }, 700);
-        })
-
-
-        $(document).ready(function() {
-            $("[rel='tooltip']").tooltip();
-
-            $('.thumbnail').hover(
-                function() {
-                    $(this).find('.caption').fadeIn(250);
-                },
-                function() {
-                    $(this).find('.caption').fadeOut(205);
-                }
-            );
-        });
-
-    </script>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
-
 </html>
