--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title></title>
   </head>
   <body>
-    Oof you've found me
+    Oof you've found me (Hosting QuickRead database right now...)
   </body>
 </html>
