--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
   <body>
     Oof you've found me (Hosting QuickRead database right now...)
   </body>
+  <script>
+document.getElementById("demo").innerHTML = "My First JavaScript";
+</script>
 </html>
