--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <script language="JavaScript">
+    // Define a function for later use
+    function print_todays_date( ) {
+        var d = new Date( );                  // Get today's date and time
+        document.write(d.toLocaleString( ));  // Insert it into the document
+    }
+    </script>
     <title></title>
   </head>
   <body>
     Oof you've found me (Hosting QuickRead database right now...)
-  </body>
-  <script>
-document.getElementById("demo").innerHTML = "My First JavaScript";
+    The date and time are:<br>
+<script language="JavaScript">
+  // Now call the function we defined above
+  print_todays_date( );
 </script>
+  </body>
+  
 </html>
