--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
   print_todays_date( );
 </script>
   </body>
+  <script language ="HTML5">
+  var connection = new WebSocket('ws://IPAddress:Port');
+
+connection.onopen = function () {
+  connection.send('Ping'); // Send the message 'Ping' to the server
+};
+    </script>
   
 </html>
