--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         document.write(d.toLocaleString( ));  // Insert it into the document
     }
     </script>
-    <title></title>
+    <title>Oepidus is wut curtis says</title>
   </head>
   <body>
     Oof you've found me (Hosting QuickRead database right now...)
