--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ img.emoji {
 	padding: 0 !important;
 }
 </style>
-	<link rel='stylesheet' id='all-css-0-1' href='https://prestonisbored.mooo.com/stylesheet.txt' type='text/css' media='all' />
+	<link rel='stylesheet' id='all-css-0-1' href='prestonisbored.mooo.com/stylesheet.txt' type='text/css' media='all' />
 <style id='independent-publisher-2-style-inline-css' type='text/css'>
 #hero-header { background: url("cropped-image-1.png") no-repeat center; background-size: cover; background-attachment: scroll; }
 </style>
