--- a/index.html
+++ b/index.html
@@ -12,13 +12,37 @@
     <a href="https://en.wikipedia.org/wiki/Axolotl" target="_blank">
         <div class="parallax"></div>
     </a>
-    <h2 style="font-size: 30px;">I like to code, and I'm going to go to college for Computer Science :D</h2>
-    <p>Here is something I'm currently working on:</p>
-    <img src="progress%201-12-2021.png" width="90%">
-    <p>It is a 2D platformer game !</p>
+    <div style="background-color: white;color: black">
+        <br>
+        <p style="font-size: 20px;">I'm a coder! Below you can find projects I'm currently working on.</p>
+        <br>
+    </div>
     <br>
+    <br>
+    <section>
+        <div class="desc">
+            <p style="font-size: 45px"><b><u>Box Adventure</u></b></p>
+            This is a game I made called Box Adventure. It's my first ever 2D platformer game and I'm really proud of it, since it actually looks somewhat professional.
+        </div>
+        <img src="progress%201-12-2021.png" width="60%">
+    </section>
+    <br>
+    <br>
+    <div style="background-color: white;color: black">
+        <br>
+        <p style="font-size: 20px;">Here's something I made a while back</p>
+        <br>
+    </div>
+    <br>
+    <br>
+    <section>
+        <div class="desc2">
+            <p style="font-size: 45px"><b><u>Genetic Algorithm</u></b></p>
+            This is a project I made in Honors AI with Dr. Delgado. It's the last project of the entire course and I had a lot of fun making it!
+        </div>
+        <img src="genetic.png" width="60%">
+    </section>
     <a href="#top">Go Back Up</a>
-    <br>
 </body>
 
 </html>
