--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <div style="background-color: white;color: black">
         <br>
         <p style="font-size: 20px;">Here's something I made a while back</p>
-        <br>
     </div>
     <br>
     <br>
@@ -42,7 +41,24 @@
         </div>
         <img src="genetic.png" width="60%">
     </section>
-    <a href="#top">Go Back Up</a>
+    <div style="background-color: white;color: black">
+        <br>
+        <p style="font-size: 20px;">In my free time I like tohangout with my friends, play video games, and watch anime.</p>
+        <br>
+    </div>
+    <left><a href="https://en.wikipedia.org/wiki/Demon_Slayer:_Kimetsu_no_Yaiba" target="_blank"><img src="demon-slayer.png" width="40%"></a></left>
+    <right><a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank"><img src="aot.jpg" width="30%"></a></right>
+    <br>
+    <div style="background-color: white;color: black">
+        <br>
+        <br>
+        <br>
+    </div>
+    <footer>
+        <p>Thanks for visiting my website!</p>
+        <a href="#top">Go Back Up</a>
+    </footer>
+    <br>
 </body>
 
 </html>
