--- a/index.html
+++ b/index.html
@@ -1,65 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Preston Tang</title>
-    <link rel="stylesheet" href="style.css">
+    <title>NeuroTank</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.7/pixi.min.js"></script>
 </head>
 
 <body>
-    <h1 id="top" style="font-size: 75px;">Hi I'm Preston</h1>
-    <a href="https://en.wikipedia.org/wiki/Axolotl" target="_blank">
-        <div class="parallax"></div>
-    </a>
-    <div style="background-color: white;color: black">
-        <br>
-        <p style="font-size: 20px;">I'm a coder! Below you can find projects I'm currently working on.</p>
-        <br>
-    </div>
-    <br>
-    <br>
-    <section>
-        <div class="desc">
-            <p style="font-size: 45px"><b><u>Box Adventure</u></b></p>
-            This is a game I made called Box Adventure. It's my first ever 2D platformer game and I'm really proud of it, since it actually looks somewhat professional.
-        </div>
-        <img src="progress%201-12-2021.png" width="60%">
-    </section>
-    <br>
-    <br>
-    <div style="background-color: white;color: black">
-        <br>
-        <p style="font-size: 20px;">Here's something I made a while back</p>
-        <br>
-    </div>
-    <br>
-    <br>
-    <section>
-        <div class="desc2">
-            <p style="font-size: 45px"><b><u>Genetic Algorithm</u></b></p>
-            This is a project I made in Honors AI with Dr. Delgado. It's the last project of the entire course and I had a lot of fun making it!
-        </div>
-        <img src="genetic.png" width="60%">
-    </section>
-    <div style="background-color: white;color: black">
-        <br>
-        <p style="font-size: 20px;">In my free time I like to hangout with my friends, play video games, and watch anime.</p>
-        <br>
-    </div>
-    <left><a href="https://en.wikipedia.org/wiki/Demon_Slayer:_Kimetsu_no_Yaiba" target="_blank"><img src="demon-slayer.png" width="40%"></a></left>
-    <right><a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank"><img src="aot.jpg" width="30%"></a></right>
-    <br>
-    <div style="background-color: white;color: black">
-        <br>
-        <br>
-        <br>
-    </div>
-    <footer>
-        <p>Thanks for visiting my website!</p>
-        <a href="#top">Go Back Up</a>
-    </footer>
-    <br>
+    <div id="gameContainer"></div>
+    <button id="switchSceneButton">Switch to Game</button>
+    <button id="copyMapButton">Copy Map to Clipboard</button>
+    <label for="itemSelectLabel">Current item:</label>
+
+    <select name="" id="itemSelect">
+        <option value="wall">Wall</option>
+        <option value="hole">Hole</option>
+        <option value="line">Collision Lines</option>
+        <option value="playerSpawn">Player Spawn</option>
+        <option value="brownTankSpawn">Brown Tank Spawn</option>
+        <option value="greyTankSpawn">Grey Tank Spawn</option>
+        <option value="greenTankSpawn">Green Tank Spawn</option>
+        <option value="pinkTankSpawn">Pink Tank Spawn</option>
+    </select>
+
+    <input type="file" id="fileInput">
+
+    <script type="module" src="SceneManager.js"></script>
 </body>
 
 </html>
