Made additional progress on the reinforcement learning agent and fixed some bugs along the way

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <button id='sliderResetButton' type="button">Reset Speed</button>
         <label for="levelInput">Set Level (1-10)</label>
         <input type="text" id="levelInput" name="levelInput" size="10" />
+        <label id="fpsLabel"></label>
+        <button id="saveModelButton">Save Model</button>
     </div>
 
     <div id="mapElementsContainer">
