--- a/index.html
+++ b/index.html
@@ -1,56 +1,86 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>NeuroTank</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.7/pixi.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
-    <link rel="stylesheet" href="styles.css">
+    <title>Projects Hub</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #f5f5f5;
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container {
+            text-align: center;
+            padding: 40px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 40px;
+            font-size: 2.5em;
+        }
+
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .project-card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            border: 1px solid #eee;
+            transition: transform 0.2s, box-shadow 0.2s;
+            cursor: pointer;
+            text-decoration: none;
+            color: #333;
+        }
+
+        .project-card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .project-title {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+            color: #2c3e50;
+        }
+
+        .project-description {
+            color: #666;
+            font-size: 0.9em;
+            line-height: 1.4;
+        }
+    </style>
 </head>
-
 <body>
-    <div id="gameContainer"></div>
-    <button id="switchSceneButton">Switch to Game</button>
-
-    <div id="gameElementsContainer">
-        <label id="playerSelectLabel" for="playerSelectLabel">Set Player As:</label>
-
-        <select name="" id="playerSelect">
-            <option value="player">Player</option>
-            <option value="brown">Brown Tank</option>
-            <option value="grey">Grey Tank</option>
-            <option value="green">Green Tank</option>
-            <option value="pink">Pink Tank</option>
-            <option value="black">Black Tank</option>
-            <option value="rl">Reinforcement Learning Tank</option>
-        </select>
-        <label id="sliderLabel" for="slider">Set Game Speed:</label>
-        <input id='slider' type="range" min="0.1" max="2.5" value="1" class="slider" id="myRange" step="0.1">
-        <button id='sliderResetButton' type="button">Reset Speed</button>
-        <label for="levelInput">Set Level (1-10)</label>
-        <input type="text" id="levelInput" name="levelInput" size="10" />
-        <label id="fpsLabel"></label>
-        <button id="saveModelButton">Save Model</button>
+    <div class="container">
+        <h1>Projects Hub</h1>
+        <div class="project-grid">
+            <a href="neurotank.html" class="project-card">
+                <div class="project-title">NeuroTank</div>
+                <div class="project-description">
+                    An AI-powered tank battle simulation using TensorFlow and PIXI.js
+                </div>
+            </a>
+            <a href="void.html" class="project-card">
+                <div class="project-title">Digital Void</div>
+                <div class="project-description">
+                    An interactive exploration of entropy and digital decay
+                </div>
+            </a>
+        </div>
     </div>
-
-    <div id="mapElementsContainer">
-        <label id="itemSelectLabel" for="itemSelectLabel">Current item:</label>
-        <select name="" id="itemSelect">
-            <option value="wall">Wall</option>
-            <option value="hole">Hole</option>
-            <option value="line">Collision Lines</option>
-            <option value="playerSpawn">Player Spawn</option>
-            <option value="brownTankSpawn">Brown Tank Spawn</option>
-            <option value="greyTankSpawn">Grey Tank Spawn</option>
-            <option value="greenTankSpawn">Green Tank Spawn</option>
-            <option value="pinkTankSpawn">Pink Tank Spawn</option>
-        </select>
-        <button id="copyMapButton">Copy Map to Clipboard</button>
-        <input type="file" id="fileInput">
-    </div>
-
-
-    <script type="module" src="SceneManager.js"></script>
 </body>
-
 </html>
