--- a/neurotank.html
+++ b/neurotank.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>NeuroTank</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.7/pixi.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pixi.js-legacy@6.5.10/dist/browser/pixi-legacy.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
